--- a/src/sass/panorama.scss
+++ b/src/sass/panorama.scss
@@ -8,7 +8,7 @@
   position: fixed;
   top: 0;
   z-index: 100;
-  overflow-x: visible;
+  overflow-x: scroll;
 }
 
 .panorama-gyms {
@@ -21,7 +21,7 @@
   position: fixed;
   top: 0;
   z-index: 100;
-  overflow-x: visible;
+  overflow-x: scroll;
 }
 
 // .panorama1 {
