--- a/src/sass/contacts.scss
+++ b/src/sass/contacts.scss
@@ -52,9 +52,15 @@
 
 .contacts-social__wrapper {
   display: flex;
+  flex-grow: row wrap;
   margin-top: 104px;
 }
 
+.contacts-social__wrapper-down {
+  display: flex;
+  flex-grow: row wrap;
+  margin-top: 20px;
+}
 
 
 .social-instagram img {
@@ -84,20 +90,103 @@
   color: #F15A29;
 }
 
+.social-mail {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+ 
+  
+}
+.social-mail img {
+  width: 19px;
+  vertical-align: middle;
+}
+
+.social-mail span {
+  margin-left: 12px;
+}
+
+.social-mail:hover {
+  color: #F15A29;
+}
+
+.social-phone {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  margin-left: 18px;
+}
+
+.social-phone img {
+  width: 17px;
+  vertical-align: middle;
+}
+
+.social-phone span {
+  margin-left: 12px;
+}
+
+.social-phone:hover {
+  color: #F15A29;
+}
+
+
+
 
 @media (max-width: 767px) {
 	.contacts-wrapper {
-		margin-left: 150px;
+	  margin-left: 29px;
 	}
-
-	.contacts-worktime__wrapper {
-		margin-left: 0;
-	}
+  
+  .contacts-worktime__wrapper {
+    margin-top: 36px;
+    margin-left: 0;
+  }
 
 }
 
 @media (max-width: 576px) {
-	.contacts-wrapper {
-		margin-left: 52px;
-	}
+  .contacts-social__wrapper {
+    flex-direction: column;
+    margin-top: 46px;
+  }
+
+  .contacts-social__wrapper-down {
+    flex-direction: column;
+  }
+
+  .social-phone {
+    margin-left: 0;
+    margin-top: 20px;
+  }
+
+  
+
+  .social-map {
+    margin-left: -17px;
+    margin-top: 20px;
+    
+  }
+	.contacts-social__wrapper span {
+    font-size: 14px;
+    margin-left: 3px;
+  }
+
+  .contacts {
+    margin-top: -90px;
+  }
+
+}
+
+@media (max-width: 446px) {
+  .contacts {
+    margin-top: -80px;
+  }
+  .contacts-wrapper {
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 424px) {
+  .contacts {
+    margin-top: -100px;
+  }
 }
