--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -87,7 +87,8 @@ header {
 	width: 100%;
 	display: flex;
 	position: fixed;
-
+	margin-top: -8px;
+	background: #F15A29;
 	// background: black;
 	// margin-left: 8px;
 	z-index: 1;
@@ -136,13 +137,13 @@ header {
 	width: 100%;
 }
 
-// .another {
-// 	top: -100px;
-// }
+.another {
+	background: #ffffff;
+}
 
 .another li {
 	color: black;
-	transition: 2s;
+	transition: 1s;
 }
 
 .another li:after {
@@ -151,7 +152,7 @@ header {
 
 .another-white {
 	color: white;
-	transition: 2s;
+	transition: 1s;
 }
 
 
@@ -190,7 +191,7 @@ header {
 	
 }
 
-.main-title {
+.main-title h2 {
 	font-style: normal;
 	font-weight: normal;
 	font-size: 30px;
@@ -198,7 +199,7 @@ header {
 	color: #ffffff
 }
 
-.main-name {
+.main-name h1 {
 	font-family: Montserrat;
 	font-style: normal;
 	font-weight: normal;
@@ -279,8 +280,12 @@ header {
 
 @media (max-width: 1024px) {
 	.main-nav__ul {
-		margin-left: 17px;
+		padding-left: 34px;
 	}
+	.main-nav__li {
+		font-size: 9px;
+	}
+
 }
 
 
@@ -288,10 +293,14 @@ header {
 	.main-content__right {
 		display: none;
 	}
-	
+
 	.main-content {
-		padding-top: 146px;
+		padding-top: 110px;
 	}
+	
+	// .main-content {
+	// 	padding-top: 146px;
+	// }
 	.main-nav__li {
 		font-size: 9px;
 	}
@@ -336,11 +345,12 @@ header {
 
 	.main-content {
 		margin-left: 41px;
-		padding-top: 107px;
+		margin-top: auto;
 	}
-	.main-name {
+	.main-name h1{
 		font-size: 40px;
 	}
+
 	
 }
 
@@ -349,10 +359,20 @@ header {
 	.main-content {
 		margin-left: 14px;
 	}
-	.main-name {
-		letter-spacing: 5.8333px;
+	.main-title h2 {
+		font-size: 26px;
+	}
+
+	.main-name h1 {
+		letter-spacing: 4.8333px;
 		font-size: 30px;
 	}
+
+	#fp-nav.fp-right {
+		display: none;
+	}
+	
+	
 }
 
 
@@ -361,7 +381,7 @@ header {
 	.main-title{
 		font-size: 22px;
 	}
-	.main-name {
+	.main-name h1 {
 		font-size: 25px;
 	}
 }
