--- a/src/sass/reset.scss
+++ b/src/sass/reset.scss
@@ -40,3 +40,11 @@ button {
   text-transform: uppercase;
 }
 
+
+// @media (max-width: 1024px) {
+//   #fullpage .fp-tableCell {
+//     vertical-align: inherit;
+//     padding: 0;
+//   }
+// }
+
